--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -44,10 +44,16 @@
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Used for data security purposes.</string>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>Used for CareKit collection sample.</string>
 	<key>NSHealthShareUsageDescription</key>
 	<string>Used for data security purposes.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Used for data security purposes.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Used for sensor collection demo tasks.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Used for sensor collection demo tasks.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSMotionUsageDescription</key>
@@ -71,6 +77,14 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>location</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
