--- a/CardinalKit-Example/CardinalKit/Supporting Files/GoogleService-Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>267563013930-esrpvvdn6429pbd50qfpo2rgh1rgsl9e.apps.googleusercontent.com</string>
+	<string>47235957743-5pf1m2fcbd0c1d4299cdtqi7pdsmrj9a.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.267563013930-esrpvvdn6429pbd50qfpo2rgh1rgsl9e</string>
+	<string>com.googleusercontent.apps.47235957743-5pf1m2fcbd0c1d4299cdtqi7pdsmrj9a</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDZFphOPsibFOO40SdVJfRF-lVgH21riJk</string>
+	<string>AIzaSyC6dTJzvuskT9cNHTnGWOpMCQmY_ZnuDbQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>267563013930</string>
+	<string>47235957743</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>edu.stanford.cardinalkit</string>
+	<string>edu.stanford.cs342-alpha</string>
 	<key>PROJECT_ID</key>
-	<string>cs342-master-sample</string>
+	<string>cs342-alpha-9bb64</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cs342-master-sample.appspot.com</string>
+	<string>cs342-alpha-9bb64.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:267563013930:ios:d1af91089e477416ccb053</string>
-	<key>DATABASE_URL</key>
-	<string>https://cs342-master-sample.firebaseio.com</string>
+	<string>1:47235957743:ios:74c7bca7cb458dff9f2c1a</string>
 </dict>
 </plist>
