chore: updating dependencies.

--- a/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
+++ b/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:CardinalKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8F758C3207C24BE3F051DB5E9AFB3F14"
+               BuildableName = "CardinalKit.framework"
+               BlueprintName = "CardinalKit"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
